go/include/chromahash.h

/*
 * ChromaHash — C API.
 *
 * GENERATED by cbindgen from `bindings/c` — do not edit by hand. Regenerate with
 * `just gen-c-header` (or any `cargo build` of the chromahash-c crate).
 *
 * Conventions:
 *   - Fallible functions return a ChromaHashStatus code (CHROMA_HASH_STATUS_OK == 0);
 *     results are written through out-parameters.
 *   - ChromaHash / ChromaHashBatchEncoder are opaque handles — create with a
 *     constructor, release with the matching *_free.
 *   - A decoded ChromaHashImage is owned by the library: release it with
 *     chromahash_image_free. Input RGBA buffers are read-only and caller-owned.
 */

#ifndef CHROMAHASH_H
#define CHROMAHASH_H

#pragma once

#include <stdarg.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * Source/target color space. Mirrors [`chromahash::Gamut`].
 */
enum ChromaHashGamut
#ifdef __cplusplus
  : int32_t
#endif // __cplusplus
 {
    CHROMA_HASH_GAMUT_SRGB = 0,
    CHROMA_HASH_GAMUT_DISPLAY_P3 = 1,
    CHROMA_HASH_GAMUT_ADOBE_RGB = 2,
    CHROMA_HASH_GAMUT_BT2020 = 3,
    CHROMA_HASH_GAMUT_PRO_PHOTO_RGB = 4,
};
#ifndef __cplusplus
typedef int32_t ChromaHashGamut;
#endif // __cplusplus

/**
 * Status code returned by every fallible entry point. `Ok` is `0`.
 */
enum ChromaHashStatus
#ifdef __cplusplus
  : int32_t
#endif // __cplusplus
 {
    /**
     * Success.
     */
    CHROMA_HASH_STATUS_OK = 0,
    /**
     * A required pointer argument was NULL.
     */
    CHROMA_HASH_STATUS_NULL_POINTER = 1,
    /**
     * A buffer length was wrong (rgba != width*height*4, or hash != 32 bytes,
     * or an output capacity was too small).
     */
    CHROMA_HASH_STATUS_INVALID_LENGTH = 2,
    /**
     * A dimension was zero.
     */
    CHROMA_HASH_STATUS_INVALID_DIMENSIONS = 3,
    /**
     * The core panicked or an allocation failed — caught at the boundary.
     */
    CHROMA_HASH_STATUS_INTERNAL = 4,
};
#ifndef __cplusplus
typedef int32_t ChromaHashStatus;
#endif // __cplusplus

/**
 * A 32-byte ChromaHash placeholder. Opaque handle; create with
 * [`chromahash_encode`] or [`chromahash_from_bytes`], release with
 * [`chromahash_free`].
 */
typedef struct ChromaHash ChromaHash;

/**
 * A stateful batch encoder backed by a persistent worker pool. Opaque handle;
 * create with [`chromahash_batch_encoder_new`], release with
 * [`chromahash_batch_encoder_free`].
 */
typedef struct ChromaHashBatchEncoder ChromaHashBatchEncoder;

/**
 * An 8-bit-per-channel RGBA color.
 */
typedef struct {
    uint8_t r;
    uint8_t g;
    uint8_t b;
    uint8_t a;
} ChromaHashColor;

/**
 * A decoded RGBA image (≤ 32×32 px). `rgba` is library-owned and row-major,
 * 4 bytes/pixel (R, G, B, A); release the whole struct with
 * [`chromahash_image_free`].
 */
typedef struct {
    uint32_t width;
    uint32_t height;
    uint8_t *rgba;
    size_t rgba_len;
} ChromaHashImage;

/**
 * One image to encode in a batch. The caller owns `rgba` (read-only).
 */
typedef struct {
    uint32_t width;
    uint32_t height;
    const uint8_t *rgba;
    size_t rgba_len;
    ChromaHashGamut gamut;
} ChromaHashImageInput;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * Encode an RGBA image (4 bytes/pixel) into a 32-byte ChromaHash. On success
 * `*out_hash` receives a new handle to free with [`chromahash_free`].
 */
ChromaHashStatus chromahash_encode(uint32_t width,
                                   uint32_t height,
                                   const uint8_t *rgba,
                                   size_t rgba_len,
                                   ChromaHashGamut gamut,
                                   ChromaHash **out_hash);

/**
 * Reconstruct a handle from a raw 32-byte hash. `bytes` must be exactly 32 bytes.
 * On success `*out_hash` receives a new handle to free with [`chromahash_free`].
 */
ChromaHashStatus chromahash_from_bytes(const uint8_t *bytes, size_t len, ChromaHash **out_hash);

/**
 * Release a handle from [`chromahash_encode`] / [`chromahash_from_bytes`].
 * NULL-safe.
 */
void chromahash_free(ChromaHash *hash);

/**
 * Copy the raw 32-byte hash into `out_buf`. `out_cap` must be ≥ 32.
 */
ChromaHashStatus chromahash_as_bytes(const ChromaHash *hash, uint8_t *out_buf, size_t out_cap);

/**
 * Whether this hash uses the v0.6 bitstream this library implements. Decoding an
 * unsupported hash produces garbage, not an error — check this for hashes of
 * unknown provenance. Returns `false` for a NULL handle.
 */
bool chromahash_is_version_supported(const ChromaHash *hash);

/**
 * Extract the average color without a full decode.
 */
ChromaHashStatus chromahash_average_color(const ChromaHash *hash, ChromaHashColor *out_color);

/**
 * Decode into an sRGB RGBA image (≤ 32×32 px). `*out_image` receives a library-owned
 * image to release with [`chromahash_image_free`].
 */
ChromaHashStatus chromahash_decode(const ChromaHash *hash, ChromaHashImage *out_image);

/**
 * Decode into an RGBA image in the given output gamut (sRGB / Display P3 /
 * Adobe RGB; others fall back to sRGB). `*out_image` receives a library-owned
 * image to release with [`chromahash_image_free`].
 */
ChromaHashStatus chromahash_decode_to(const ChromaHash *hash,
                                      ChromaHashGamut output,
                                      ChromaHashImage *out_image);

/**
 * Decode into an sRGB RGBA image, capped at the given maximum dimensions. `*out_image`
 * receives a library-owned image to release with [`chromahash_image_free`].
 */
ChromaHashStatus chromahash_decode_capped(const ChromaHash *hash,
                                          uint32_t max_width,
                                          uint32_t max_height,
                                          ChromaHashImage *out_image);

/**
 * Capped decode (see [`chromahash_decode_capped`]) in the given output gamut.
 */
ChromaHashStatus chromahash_decode_capped_to(const ChromaHash *hash,
                                             uint32_t max_width,
                                             uint32_t max_height,
                                             ChromaHashGamut output,
                                             ChromaHashImage *out_image);

/**
 * Release the RGBA buffer owned by a [`ChromaHashImage`] and zero the struct.
 * NULL-safe; safe to call once per successful decode.
 */
void chromahash_image_free(ChromaHashImage *image);

/**
 * Create a batch encoder with a worker pool sized to the available parallelism.
 * Returns NULL only if the pool could not be created. Free with
 * [`chromahash_batch_encoder_free`].
 *
 * Not thread-safe: do not call [`chromahash_batch_encode`] on the same encoder
 * from multiple threads at once. Use one encoder per thread, or synchronize
 * externally. (A single batch already parallelizes internally across the pool.)
 */
ChromaHashBatchEncoder *chromahash_batch_encoder_new(void);

/**
 * Create a batch encoder with an explicit worker count (clamped to ≥ 1).
 */
ChromaHashBatchEncoder *chromahash_batch_encoder_with_threads(size_t threads);

/**
 * Release a batch encoder. NULL-safe.
 */
void chromahash_batch_encoder_free(ChromaHashBatchEncoder *enc);

/**
 * Encode `count` images in parallel. `out_hashes` must point to an array of
 * `count` handle slots; on success each is set to a new handle to free
 * individually with [`chromahash_free`]. On any error no handle is allocated.
 * Output is byte-identical to calling [`chromahash_encode`] on each image.
 */
ChromaHashStatus chromahash_batch_encode(ChromaHashBatchEncoder *enc,
                                         const ChromaHashImageInput *items,
                                         size_t count,
                                         ChromaHash **out_hashes);

/**
 * The library version as a static, NUL-terminated string. Do not free.
 */
const char *chromahash_version(void);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* CHROMAHASH_H */